--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,9 @@ hr{
 .navbar-toggler:focus {
     box-shadow: 0 0 0 ;
 }
+.navbar-dark .navbar-nav .active > .nav-link {
+    color: #2a2a2a;
+}
 
 
 /* ======== header css end======== */
